--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-jwt": "^8.5.1",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0"
   }
 }
